Now working on doing everything in one progress.. squashed bug with general collection information.

--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -4,12 +4,22 @@
   width: 90%;
 }
 
-.form-spacing {
-  margin-top: 20px;
-}
-
 .error-message {
   color: red;
   display: none;
   text-align: center;
+}
+
+.form-spacing {
+  margin-top: 20px;
+}
+
+/* PREEXISTING STYLES */
+button:hover{
+  opacity:0.5;
+  cursor: pointer;
+}
+
+.panel-heading{
+  height: 55px;
 }
